force-app/main/default/objects/AprilObject__c/AprilObject__c.object-meta.xml
<CustomObject>
    <label>AprilObject</label>
    <nameField>
        <label>AprilObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AprilObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>