force-app/main/default/objects/AprilObject__c/fields/AprilObject_Date__c.field-meta.xml
<CustomField>
    <fullName>AprilObject_Date__c</fullName>
    <label>AprilObject Date</label>
    <type>Date</type>
</CustomField>