force-app/main/default/objects/AprilObject__c/fields/AprilObject_Number__c.field-meta.xml
<CustomField>
    <fullName>AprilObject_Number__c</fullName>
    <label>AprilObject Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>