force-app/main/default/objects/AprilObject__c/fields/AprilObject_Text__c.field-meta.xml
<CustomField>
    <fullName>AprilObject_Text__c</fullName>
    <label>AprilObject Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>